[gd_scene load_steps=4 format=3 uid="uid://dohvqb6c1613p"]

[ext_resource type="Theme" uid="uid://blbl1uhbtj7qj" path="res://Resources/zude_tools_theme.tres" id="1_p7oms"]
[ext_resource type="Script" path="res://Scenes/zude_tools_tab_item.gd" id="2_6fbx3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_50ba4"]

[node name="ThumbPanelContainer" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 55.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_p7oms")
script = ExtResource("2_6fbx3")

[node name="ThumbMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ThumbVBoxContainer" type="VBoxContainer" parent="ThumbMarginContainer"]
layout_mode = 2

[node name="ThumbImage" type="TextureRect" parent="ThumbMarginContainer/ThumbVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
expand_mode = 5
stretch_mode = 5

[node name="ThumbTitle" type="Label" parent="ThumbMarginContainer/ThumbVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Title"
max_lines_visible = 2

[node name="ThumbButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_50ba4")
